--- a/APS01/titanic_ClevertonC_GustavoCL_IgorPL.html
+++ b/APS01/titanic_ClevertonC_GustavoCL_IgorPL.html
@@ -13017,45 +13017,6 @@ ul.typeahead-list  > li > a.pull-right {
 .highlight .vm { color: #19177C } /* Name.Variable.Magic */
 .highlight .il { color: #666666 } /* Literal.Number.Integer.Long */
     </style>
-<style type="text/css">
-    
-/* Temporary definitions which will become obsolete with Notebook release 5.0 */
-.ansi-black-fg { color: #3E424D; }
-.ansi-black-bg { background-color: #3E424D; }
-.ansi-black-intense-fg { color: #282C36; }
-.ansi-black-intense-bg { background-color: #282C36; }
-.ansi-red-fg { color: #E75C58; }
-.ansi-red-bg { background-color: #E75C58; }
-.ansi-red-intense-fg { color: #B22B31; }
-.ansi-red-intense-bg { background-color: #B22B31; }
-.ansi-green-fg { color: #00A250; }
-.ansi-green-bg { background-color: #00A250; }
-.ansi-green-intense-fg { color: #007427; }
-.ansi-green-intense-bg { background-color: #007427; }
-.ansi-yellow-fg { color: #DDB62B; }
-.ansi-yellow-bg { background-color: #DDB62B; }
-.ansi-yellow-intense-fg { color: #B27D12; }
-.ansi-yellow-intense-bg { background-color: #B27D12; }
-.ansi-blue-fg { color: #208FFB; }
-.ansi-blue-bg { background-color: #208FFB; }
-.ansi-blue-intense-fg { color: #0065CA; }
-.ansi-blue-intense-bg { background-color: #0065CA; }
-.ansi-magenta-fg { color: #D160C4; }
-.ansi-magenta-bg { background-color: #D160C4; }
-.ansi-magenta-intense-fg { color: #A03196; }
-.ansi-magenta-intense-bg { background-color: #A03196; }
-.ansi-cyan-fg { color: #60C6C8; }
-.ansi-cyan-bg { background-color: #60C6C8; }
-.ansi-cyan-intense-fg { color: #258F8F; }
-.ansi-cyan-intense-bg { background-color: #258F8F; }
-.ansi-white-fg { color: #C5C1B4; }
-.ansi-white-bg { background-color: #C5C1B4; }
-.ansi-white-intense-fg { color: #A1A6B2; }
-.ansi-white-intense-bg { background-color: #A1A6B2; }
-
-.ansi-bold { font-weight: bold; }
-
-    </style>
 
 
 <style type="text/css">
@@ -13116,7 +13077,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Equipe:">Equipe:<a class="anchor-link" href="#Equipe:">&#182;</a></h1><p>Cleverton Carneiro, Gustavo Cordeiro e Igor Pardal Latini</p>
+<h1 id="Equipe:">Equipe:<a class="anchor-link" href="#Equipe:">&#182;</a></h1><p>Cleverton Carneiro, Gustavo Cordeiro e Igor Pardal</p>
 
 </div>
 </div>
@@ -16783,7 +16744,7 @@ Wall time: 2.81 s
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Conclus&#227;o:">Conclus&#227;o:<a class="anchor-link" href="#Conclus&#227;o:">&#182;</a></h3><ul>
-<li>percebemos que a base <strong>less</strong> para alguns modelos apresenta um melhor resultado em relação a base <strong>less</strong>, considerando que ambas tem o mesmo número de colunas.</li>
+<li>percebemos que a base <strong>less</strong> apresenta um melhor resultado em relação a base <strong>pca16</strong> para 3 dos 4 modelos, considerando que ambas tem o mesmo número de colunas.</li>
 <li>pela a nossa avaliação os melhores modelos são: <strong>Decision Tree</strong> utilizando a base <strong>less</strong> e <strong>Random Forest</strong> utilizando a base <strong>pca16</strong>.</li>
 <li>menção honrosa ao modelo <strong>Decision Tree</strong> utilizando a base <strong>Full</strong>, com o parâmetro max_depth = 3 já apresenta bons resultados. Portanto, consiste em um modelo mais parcimonioso. </li>
 </ul>
